[package]
name = "build-codebase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
chrono = "0.4.26"
lazy_static = "1.4.0"
log4rs = "1.2.0"
run_script = "^0.10.1"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "fast-rng", "macro-diagnostics"]
